[package]
name = "rcloc"
version = "1.0.0"
edition = "2021"
description = "A fast clone of cloc (Count Lines of Code) written in Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[[bin]]
name = "rcloc"
path = "src/main.rs"

[dependencies]
rayon = "1.8"
walkdir = "2.4"
clap = "4.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"